Fix image layout bug in Safari

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -118,6 +118,7 @@ ul {
 
 .img-container > img {
     width: 45%;
+    height: 45%;
     border-radius: 2px;
 }
 
